# py.sdk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  duties.py  pyproject.toml
.docs/: .mkdocs.req  .mkdocs.yml  agreements.md
.docs/dev/: index.md
.docs/tools/: grpc.md  index.md
.github/workflows/: build_deploy.yml
.lab/: client.ipynb  work.ipynb
facety/: agreements.py
facety/_abc/: grpc.py
facety/_grpc/: agreements.proto  agreements_pb2.py  agreements_pb2_grpc.py
facety/_test/: agreements_test.py
facety/tools/: __init__.py  _other.py  grpc.py
